user panel update